syntax = "proto2";

package ndll_proto;

// Tensorflow feature
message TFFeature {
  required string name = 1;
  required int64 type = 2;
  repeated int64 shape = 3;
  required string default_value = 4;
}

// Stores a single argument
message Argument {
  required string name = 1;
  optional float f = 2;
  repeated float floats = 3;
  optional int64 i = 4;
  repeated int64 ints = 5;
  optional string s = 6;
  repeated string strings = 7;
  optional bool b = 8;
  repeated bool bools = 9;
  optional TFFeature feature = 10;
  repeated TFFeature features = 11;
}

message InputOutput {
  required string name = 1;
  required string device = 2;
}

// stores info about a single operator
message OpDef {
  required string name = 1;
  // list of inputs & outputs
  repeated InputOutput input = 2;
  repeated InputOutput output = 3;
  // Arguments
  repeated Argument args = 4;
}

// Stores pipeline options and a list of operators
message PipelineDef {
  optional int64 num_threads = 1 [default = 4];
  required int64 batch_size = 2;
  optional bool use_async = 3 [default = false];
  optional bool pipeline = 4 [default = false];

  // Store all container operators
  repeated OpDef op = 5;

  // Explicitly store all external inputs
  repeated string external_inputs = 6;
}
